b=382613, moz-border-radius of background color isn't clamped to 50%, r+sr=roc